--- a/package.yaml
+++ b/package.yaml
@@ -1,4 +1,4 @@
-name:                DPoly
+name:                poly-lang
 version:             0.1.0
 github:              dcastrop/DPoly
 license:             BSD3
