--- a/package.yaml
+++ b/package.yaml
@@ -20,13 +20,4 @@ library:
   source-dirs: src
   ghc-options:
   - -Wall
-# tests:
-#   DPoly-test:
-#     main:                Spec.hs
-#     source-dirs:         test
-#     ghc-options:
-#     - -threaded
-#     - -rtsopts
-#     - -with-rtsopts=-N
-#     dependencies:
-#     - DPoly
+  - -Werror
