--- a/package.yaml
+++ b/package.yaml
@@ -18,6 +18,7 @@ dependencies:
 - singletons >= 2.2 && < 2.4
 - prettyprinter >= 1.1 && < 1.2
 - quoted-prettyprinter >= 0.1 && < 0.2
+- mtl >= 2.2.1 && < 2.3
 
 library:
   source-dirs: src
