--- a/stack.yaml
+++ b/stack.yaml
@@ -41,6 +41,7 @@ packages:
 # (e.g., acme-missiles-0.3)
 extra-deps:
 - https://github.com/dcastrop/quoted-prettyprinter/archive/v0.1.1.zip
+- ../../tcontrol/code
 
 # Override default flag values for local packages and extra-deps
 flags: {}
