--- a/stack.yaml
+++ b/stack.yaml
@@ -42,6 +42,9 @@ packages:
 extra-deps:
 - https://github.com/dcastrop/quoted-prettyprinter/archive/v0.1.1.zip
 - ../../tcontrol/code
+- type-natural-0.8.1.0
+- equational-reasoning-0.5.1.0
+- ghc-typelits-presburger-0.2.0.0
 
 # Override default flag values for local packages and extra-deps
 flags: {}
